--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-swipeable",
+  "name": "@peterpme/react-native-swipeable",
   "version": "0.6.0",
   "description": "A powerful React Native swipe component",
   "main": "lib/index.js",
@@ -38,6 +38,7 @@
     "TableView"
   ],
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.5.10"
   }
 }
